add updated styles sheet

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,4 +1,8 @@
 #testImg {
-  max-width: 200px;
+  max-width: 400px;
   width: auto;
+}
+.sectionDiv {
+  margin-top: 35px;
+  margin-bottom: 35px
 }
